[gd_scene load_steps=5 format=3 uid="uid://cpax3ed6lg0e2"]

[ext_resource type="Script" path="res://Scripts/Objects/GraduatedCylinder.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bd7nxviy5qand" path="res://Images/Resized_Images/graduated_cylinder_container.png" id="2"]
[ext_resource type="Script" path="res://Scripts/Objects/VolumeContainer.gd" id="3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(32, 170)

[node name="GraduatedCylinder" type="RigidBody2D" groups=["LabObjects", "Liquid Container"]]
collision_layer = 2
input_pickable = true
gravity_scale = 0.0
can_sleep = false
script = ExtResource("1")
draggable = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -10.0
offset_top = -75.0
offset_right = 9.0
offset_bottom = 73.0
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="FillProgress" type="ColorRect" parent="."]
offset_left = 10.0
offset_top = 73.0
offset_right = 30.0
offset_bottom = 73.0
rotation = 3.14159
mouse_filter = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 1)
shape = SubResource("1")

[node name="VolumeContainer" type="Node2D" parent="." groups=["VolumeContainers"]]
script = ExtResource("3")

[node name="Menu" type="CanvasLayer" parent="."]
visible = false
offset = Vector2(600, 400)
transform = Transform2D(1, 0, 0, 1, 600, 400)

[node name="PanelContainer" type="PanelContainer" parent="Menu"]
offset_left = -182.0
offset_top = -133.0
offset_right = 40.0
offset_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Set Graduated Cylinder Volume"

[node name="Description" type="RichTextLabel" parent="Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Specify the volume to add in mL"

[node name="SpinBox" type="SpinBox" parent="Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
step = 5.0

[node name="DispenseButton" type="Button" parent="Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Add liquid"

[node name="CloseButton" type="Button" parent="Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Close"

[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/DispenseButton" to="." method="_on_DispenseButton_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
